Fixed carousel jumping bug

--- a/web/less/frontend/modules/collection.less
+++ b/web/less/frontend/modules/collection.less
@@ -73,6 +73,11 @@
   }
 }
 
+.vertical-carousel-wrapper {
+	height: 336px;
+	overflow: hidden;
+}
+
 .ui-carousel-navigation {
 	&.left-arrow, &.right-arrow {
 		display: block;
